<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="permission">\nThis feature requires storage access\n\n Open Settings>Permissions and allow access to storage</string>
    <string name="application_name">ExoPlayer</string>
    <string name="track_selection_title">Select tracks</string>
    <string name="unexpected_intent_action">Unexpected intent action: <xliff:g id="action">%1$s</xliff:g></string>
    <string name="error_cleartext_not_permitted">Cleartext traffic not permitted</string>
    <string name="error_generic">Playback failed</string>
    <string name="error_unrecognized_abr_algorithm">Unrecognized ABR algorithm</string>
    <string name="error_unrecognized_stereo_mode">Unrecognized stereo mode</string>
    <string name="error_drm_unsupported_before_api_18">Protected content not supported on API levels below 18</string>
    <string name="error_drm_unsupported_scheme">This device does not support the required DRM scheme</string>
    <string name="error_drm_unknown">An unknown DRM error occurred</string>
    <string name="error_no_decoder">This device does not provide a decoder for <xliff:g id="mime_type">%1$s</xliff:g></string>
    <string name="error_no_secure_decoder">This device does not provide a secure decoder for <xliff:g id="mime_type">%1$s</xliff:g></string>
    <string name="error_querying_decoders">Unable to query device decoders</string>
    <string name="error_instantiating_decoder">Unable to instantiate decoder <xliff:g id="decoder_name">%1$s</xliff:g></string>
    <string name="error_unsupported_video">Media includes video tracks, but none are playable by this device</string>
    <string name="error_unsupported_audio">Media includes audio tracks, but none are playable by this device</string>
    <string name="storage_permission_denied">Permission to access storage was denied</string>
    <string name="sample_list_load_error">One or more sample lists failed to load</string>
    <string name="ima_not_loaded">Playing sample without ads, as the IMA extension was not loaded</string>
    <string name="unsupported_ads_in_concatenation">Playing sample without ads, as ads are not supported in concatenations</string>
    <string name="download_playlist_unsupported">This demo app does not support downloading playlists</string>
    <string name="download_drm_unsupported">This demo app does not support downloading protected content</string>
    <string name="download_scheme_unsupported">This demo app only supports downloading http streams</string>
    <string name="download_live_unsupported">This demo app does not support downloading live content</string>
    <string name="download_ads_unsupported">IMA does not support offline ads</string>
    <string name="prefer_extension_decoders">Prefer extension decoders</string>
    <string name="random_abr">Enable random ABR</string>
    <string name="tunneling">Request multimedia tunneling</string>
    <string name="app_name">App Test</string>
    <string name="preference_file_key">com.example.apptest</string>
    <string name="email_title">Email</string>
    <string name="email_hint_title">Email address</string>
    <string name="password_title">Password</string>
    <string name="password_items_title">Password should be</string>
    <string name="email_items_title">Email should be</string>
    <string name="p_item_1">At least 8 characters</string>
    <string name="download_start_error">Failed to start download</string>
    <string name="e_item_1">Valid</string>
    <string name="p_item_2">Minimum one uppercase</string>
    <string name="p_item_3">Minimum one number</string>
    <string name="p_item_4">Minimum one symbol</string>
    <string name="email_error_text">The field is required</string>
    <string name="registration_title">REGISTRATION</string>
    <string name="login_title">LOGIN</string>
    <string name="test">It is test word for dance studio</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="downloads">Downloads</string>
    <string name="notification">Notification</string>
    <string name="more">More</string>
    <string name="like">like</string>
    <string name="full_name">Name</string>
    <string name="phone_number">Phone</string>
    <string name="date_of_birth">DOB</string>
    <string name="city">City</string>
    <string name="password">Password</string>
    <string name="already_have_account">already have account ?</string>
    <string name="signin">Sign in</string>
    <string name="dance_studio">Dance Studio</string>
    <string name="email">Email</string>
    <string name="email_address">Email</string>
    <string name="password_must_contain_8_charactors">Password must contain 8 characters</string>
    <string name="dont_have_account">don\'t have account ?</string>
    <string name="signup">Sign up</string>
    <string name="forgot_password">Forgot password</string>
    <string name="thumbnail_for_video">thumbnail for video</string>
    <string name="see_all">SEE ALL</string>
    <string name="likeicon">likeIcon</string>
    <string name="recent_video">Recent Videos</string>
    <string name="share">Share</string>
    <string name="download">Download</string>
    <string name="add_to_list">Add to List</string>
    <string name="my_list">My List</string>
    <string name="version_v1_0">Version v1.0</string>
    <string name="category">Category </string>
</resources>