<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/mainConstraint_register"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="50dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="50dp"
            android:layout_marginBottom="50dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="?colorPrimary"
                    android:fontFamily="@font/font"
                    android:text="@string/dance_studio"
                    android:textSize="24sp"
                    app:layout_constraintBottom_toTopOf="@+id/fullname"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/fullname"
                    style="@style/edittext"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/full_name"
                    app:boxStrokeColor="?colorPrimary"
                    app:layout_constraintBottom_toTopOf="@+id/email"
                    app:layout_constraintEnd_toStartOf="@+id/phone"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/phone"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/title">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/phone"
                    style="@style/edittext"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/phone_number"
                    app:boxStrokeColor="?colorPrimary"
                    app:layout_constraintBottom_toTopOf="@+id/dob"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/fullname"
                    app:layout_constraintTop_toBottomOf="@+id/title">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/email"
                    style="@style/edittext"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/email_address"
                    app:boxStrokeColor="?colorPrimary"
                    app:layout_constraintBottom_toTopOf="@+id/city"
                    app:layout_constraintEnd_toStartOf="@+id/dob"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/phone"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/fullname">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/dob"
                    style="@style/edittext"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/date_of_birth"
                    app:boxStrokeColor="?colorPrimary"
                    app:layout_constraintBottom_toTopOf="@+id/password"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/email"
                    app:layout_constraintTop_toBottomOf="@+id/phone">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/city"
                    style="@style/edittext"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/city"
                    app:boxStrokeColor="?colorPrimary"
                    app:layout_constraintBottom_toTopOf="@+id/signup"
                    app:layout_constraintEnd_toStartOf="@+id/password"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/phone"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/email">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/password"
                    style="@style/edittext"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    app:boxStrokeColor="?colorPrimary"
                    app:layout_constraintBottom_toTopOf="@+id/signup"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/city"
                    app:layout_constraintTop_toBottomOf="@+id/dob">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                </com.google.android.material.textfield.TextInputLayout>

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/signup"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg"
                    android:text="@string/signup"
                    app:layout_constraintBottom_toTopOf="@+id/already"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/city" />

                <TextView
                    android:id="@+id/already"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:text="@string/already_have_account"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/signin"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/signup" />

                <TextView
                    android:id="@+id/signin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="signin"
                    android:layout_marginEnd="24dp"
                    android:text="@string/signin"
                    android:textColor="?colorPrimary"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/already"
                    app:layout_constraintTop_toBottomOf="@+id/signup" />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.card.MaterialCardView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>