<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="loginViewModel"
            type="com.example.apptest.viewModel.login.LoginViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/mainConstraint_login"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/cardView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="24dp"
                android:layout_marginTop="100dp"
                android:layout_marginEnd="24dp"
                android:layout_marginBottom="100dp">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/mainConstraint"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:clipChildren="false">

                    <TextView
                        android:id="@+id/Label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="24dp"
                        android:layout_marginBottom="24dp"
                        android:fontFamily="@font/font"
                        android:text="@string/dance_studio"
                        android:textColor="@color/loginTxtColor"
                        android:textSize="24sp"
                        app:layout_constraintBottom_toTopOf="@+id/email"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/email"
                        style="@style/edittext"
                        android:hint="@string/email_address"
                        app:errorEnabled="true"
                        app:boxStrokeColor="@color/loginTxtColor"
                        app:layout_constraintBottom_toTopOf="@+id/password"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/Label">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/email_edittext"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textEmailAddress" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/password"
                        style="@style/edittext"
                        app:errorEnabled="true"
                        android:layout_marginTop="16dp"
                        android:hint="@string/password"
                        app:boxStrokeColor="@color/loginTxtColor"
                        app:layout_constraintBottom_toTopOf="@+id/login"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/email">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/password_edittext"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textPassword" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/login"
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="32dp"
                        android:layout_weight="1"
                        android:background="@drawable/bg"
                        android:text="@string/signin"
                        app:layout_constraintBottom_toTopOf="@+id/dont"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/password" />

                    <LinearLayout
                        android:id="@+id/dont"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="50dp"
                        android:orientation="horizontal"
                        android:gravity="center"
                        app:layout_constraintBottom_toTopOf="@+id/forgot"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/login">

                        <TextView

                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="2dp"
                            android:text="@string/dont_have_account" />

                        <TextView
                            android:id="@+id/signup"
                            android:layout_marginStart="2dp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:onClick="signup"
                            android:text="@string/signup"
                            android:textColor="@color/loginTxtColor"
                            app:layout_constraintEnd_toEndOf="parent" />
                    </LinearLayout>

                    <TextView
                        android:id="@+id/forgot"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:layout_marginBottom="24dp"
                        android:text="@string/forgot_password"
                        android:textColor="@color/loginTxtColor"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/dont" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </com.google.android.material.card.MaterialCardView>
        </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>